# Wokwi

./: CMakeLists.txt  README.md
docs/: architecture.md  caso_de_uso.md  estructura_repositorio.md  plan_de_pruebas.md  propuesta.md  source_material.md  wiring.md
scripts/: run.sh
src/: diagrama.json  main.py
tests/: test_plan.md
